--- a/info/info.html
+++ b/info/info.html
@@ -2,7 +2,7 @@
 <html>
 
   <head>
-  <link rel="stylesheet" href="homecss.css">
+  <link rel="stylesheet" href="info.css">
   </head>
 
   <meta charset="utf-8"/>
@@ -11,7 +11,9 @@
 
     <div class="row">
         <div id="nome" class="col">
-         Laura Luongo
+          <a href="../home.html">
+            Laura Luongo
+          </a>
         </div>
 
         <div id="archivio" class="col">
@@ -33,9 +35,6 @@
         </div>
 
         <div id="info" class="col">
-          <a href="info/info.html">
-            Info
-          </a>
         </div>
     </div>
 
@@ -58,7 +57,8 @@
       <div id="immagini" class="col"> </div>
     </div>
 
-    </body>
+
+  </body>
 
   <footer>
   </footer>
